// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar component Match snapshot search bar with left icon 1`] = `
<div>
  <div
    class="chakra-input__group css-173l7m2"
    data-group="true"
  >
    <div
      class="chakra-input__left-element css-14hjc6n"
    >
      <svg
        color="#a5adc6"
        height="20px"
        viewBox="0 0 50 50"
        width="20px"
      >
        <path
          d="M21 3C11.602 3 4 10.602 4 20s7.602 17 17 17c3.355 0 6.46-.984 9.094-2.656l12.281 12.281 4.25-4.25L34.5 30.281C36.68 27.421 38 23.88 38 20c0-9.398-7.602-17-17-17Zm0 4c7.2 0 13 5.8 13 13s-5.8 13-13 13S8 27.2 8 20 13.8 7 21 7Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      class="chakra-input css-6fwqyh"
      placeholder="Search here..."
      type="text"
    />
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`SearchBar component Match snapshot search bar with right icon 1`] = `
<div>
  <div
    class="chakra-input__group css-173l7m2"
    data-group="true"
  >
    <input
      class="chakra-input css-cishcb"
      placeholder="Search here..."
      type="text"
    />
    <div
      class="chakra-input__right-element css-rw3m41"
    >
      <svg
        color="#a5adc6"
        height="20px"
        viewBox="0 0 50 50"
        width="20px"
      >
        <path
          d="M21 3C11.602 3 4 10.602 4 20s7.602 17 17 17c3.355 0 6.46-.984 9.094-2.656l12.281 12.281 4.25-4.25L34.5 30.281C36.68 27.421 38 23.88 38 20c0-9.398-7.602-17-17-17Zm0 4c7.2 0 13 5.8 13 13s-5.8 13-13 13S8 27.2 8 20 13.8 7 21 7Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;
